src/objects/Fiscal_Year__c.object
<CustomObject>
    <fields>
        <fullName>Global_End_Date__c</fullName>
        <label>Global End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Start_Date__c</fullName>
        <label>Global Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipLabel>Next Fiscal Years</relationshipLabel>
        <relationshipName>Next_Fiscal_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>North_America_End_Date__c</fullName>
        <label>North America End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>North_America_Start_Date__c</fullName>
        <label>North America Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipLabel>Prior Fiscal Years</relationshipLabel>
        <relationshipName>Prior_Fiscal_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prior_Fiscal_Year__c</columns>
        <columns>Next_Fiscal_Year__c</columns>
        <columns>North_America_Start_Date__c</columns>
        <columns>North_America_End_Date__c</columns>
        <columns>Global_Start_Date__c</columns>
        <columns>Global_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>